--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -24,8 +24,9 @@ $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
+$dark-blue-grey: #225560 !default;
 
-$primary:       $orange !default;
+$primary:       $dark-blue-grey !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
